# parler-tts-wasm

./: .gitignore  Dockerfile  LICENSE-MIT  README.md  build.sh
backend/: Cargo.toml
backend/public/: index.html
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
scripts/: build.sh  start.sh
