[package]
name = "ttser-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Use git versions for latest candle with examples
candle = { git = "https://github.com/huggingface/candle.git", package = "candle-core", version = "0.9.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }

# Other dependencies
tokenizers = {version = "0.21.0", default-features = false}
hf-hub = "0.4.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }